@@ -6,6 +6,7 @@ import lombok.NoArgsConstructor;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 
 @Data
@@ -17,23 +18,17 @@ public class UpdateDTO{
     private String uuid;
     private String path;
 
-    private int postId;
+    private Integer postId;
 
     public String getImageURL() throws UnsupportedEncodingException {
-        try{
-            return URLEncoder.
-                    encode(path +"/"+uuid+"_"+imgName,"UTF-8");
-        } catch (UnsupportedEncodingException e){
-            e.printStackTrace();
-        }
-        return "";
+        return URLEncoder.encode(path + "/" + uuid + "_" + imgName, StandardCharsets.UTF_8);
     }
+
+    public String getImagePath() {
+        return path + "/" + uuid + "_" + imgName;
+    }
+
     public String getThumbnailURL() {
-        try {
-            return URLEncoder.encode(path + "/s_" + uuid + "_" + imgName, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-        }
-        return "";
+        return URLEncoder.encode(path + "/" + postId + "/s_" + uuid + "_" + imgName, StandardCharsets.UTF_8);
     }
 }
